# compile_check_test

./: CMakeLists.txt  README.md
include/: Calculator.h  visibility_control.hpp
src/: Calculator.cpp  a.cpp  dummy.cpp  main.cpp
